# CGAL_stuff

./: UI module list.txt
Test_Tri_3/: CMakeCache.txt  Makefile  adding_handles_3  cmake_install.cmake  color  copy_triangulation_3  draw_triangulation_3  draw_triangulation_3.cpp  fast_location_3  find_conflicts_3  for_loop  info_insert_with_pair_iterator  info_insert_with_pair_iterator_regular  info_insert_with_transform_iterator  info_insert_with_zip_iterator  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  regular_3  regular_with_info_3  segment_cell_traverser_3  segment_simplex_traverser_3  simple_triangulation_3  simplex
Test_Tri_3/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Test_Tri_3/CGAL_Qt6_moc_and_resources_autogen/: deps
Test_Tri_3/CGAL_Qt6_moc_and_resources_autogen/5XEOVZY5EI/: moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp.d
cube/: CMakeCache.txt  CMakeLists.txt  Makefile  cell.cpp  cell.h  cmake_install.cmake  cube  cube.cpp  file_processors.cpp  geometry.cpp  geometry.h  is_symmetrical  is_symmetrical.cpp  operations.cpp  operations.h  qrc_Triangulation_2.cpp  sdl_test.cpp  sdl_test.h  simulated_annealing_symmetry  simulated_annealing_symmetry.cpp  test.cpp
cube/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cube/CGAL_Qt6_moc_and_resources_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
cube/CGAL_Qt6_moc_and_resources_autogen/5XEOVZY5EI/: moc_DemosMainWindow.cpp  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_frame.cpp  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d
find_symmetry_plane/: CMakeLists.txt  cell.cpp  cmake_install.cmake  file_processors.h  is_symmetrical.cpp  main.cpp  operations.cpp  operations.h  part.h  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  sdl_test  test
find_symmetry_plane/CGAL_Qt6_moc_and_resources_autogen/: deps
find_symmetry_plane/CGAL_Qt6_moc_and_resources_autogen/5XEOVZY5EI/: moc_DemosMainWindow.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp.d  moc_frame.cpp.d  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_qglviewer.cpp  moc_qglviewer.cpp.d
image_topo/: CMakeCache.txt  CMakeLists.txt  Makefile  canvas.cpp  canvas.h  cmake_install.cmake  image_topo  image_topo.cpp  operations.cpp  operations.h
